--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.23.9",
     "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
     "nodemon": "^3.0.2",
