--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js",
-    "build": "babel src -d dist --presets @babel/preset-react"
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -34,12 +33,6 @@
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.23.3",
-    "babel-loader": "^9.1.3",
-    "nodemon": "^3.0.2",
-    "webpack": "^5.90.1",
-    "webpack-cli": "^5.1.4"
+    "nodemon": "^3.1.9"
   }
 }
