implementation of user avatar saving to cloudinary

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 BE_PORT=your_backend_port_number
 URI=your-mongodb-compass-connection-string/your-database-name
 KEY=name-of-your-key
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
